added dispmanx support to sdl - enabled by changing env SDL1_VIDEODRIVER to "dispmanx". By default it still outputs to framebuffer. This will replace our current system of having a additional sdl library installed
the dispmanx code was based on work by vanfanel, with a lot of cleanups/changes.

I stripped it down, removed a lot of code I didn't think was needed, and made some improvements - such as fixing a crash for me with advmame + sdl (and other code that called SDL_GetVideoInfo/ListModes), rewriting the scaling code, removing an exit(0), fixing a double free issue, de-duplicating it by making it share the SDL input/video headers, and some other bits

--- a/configure.in
+++ b/configure.in
@@ -1252,6 +1252,26 @@ AC_HELP_STRING([--enable-video-fbcon], [use framebuffer console video driver [[d
     fi
 }
 
+dnl Find the DISPMANX includes
+CheckDISPMANX()
+{
+    AC_ARG_ENABLE(video-dispmanx,
+AC_HELP_STRING([--enable-video-dispmanx], [use DISPMANX video modes [[default=yes]]]),
+                  , enable_video_dispmanx=yes)
+    if test x$enable_video = xyes -a x$enable_video_dispmanx = xyes; then
+        AC_MSG_CHECKING(for dispmanx support)
+        DISPMANX_LDFLAGS="-L/opt/vc/lib -lbcm_host -lvcos -lvchiq_arm"
+        DISPMANX_INCLUDES="-I/opt/vc/include -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux"
+        EXTRA_CFLAGS="$EXTRA_CFLAGS $DISPMANX_INCLUDES"
+        EXTRA_LDFLAGS="$EXTRA_LDFLAGS $DISPMANX_LDFLAGS"
+        SOURCES="$SOURCES $srcdir/src/video/dispmanx/*.c"
+        AC_DEFINE(SDL_VIDEO_DRIVER_DISPMANX)
+        video_dispmanx=yes
+        have_video=yes
+        AC_MSG_RESULT($video_dispmanx)
+    fi
+}
+
 dnl Find DirectFB
 CheckDirectFB()
 {
@@ -2363,6 +2383,7 @@ case "$host" in
         CheckX11
         CheckNANOX
         CheckFBCON
+        CheckDISPMANX
         CheckDirectFB
         CheckPS2GS
         CheckPS3
