--- a/include/SDL_config.h.in
+++ b/include/SDL_config.h.in
@@ -263,6 +263,7 @@
 #undef SDL_VIDEO_DRIVER_DRAWSPROCKET
 #undef SDL_VIDEO_DRIVER_DUMMY
 #undef SDL_VIDEO_DRIVER_FBCON
+#undef SDL_VIDEO_DRIVER_DISPMANX
 #undef SDL_VIDEO_DRIVER_GAPI
 #undef SDL_VIDEO_DRIVER_GEM
 #undef SDL_VIDEO_DRIVER_GGI
